# claude-production-patterns

./: ARCHIVE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
architecture/: blueprint.json
docs/: cloud-ai-architecture.md
docs/architecture/: blueprint.json
patterns/01-rate-limiting/: README.md  pattern.py
patterns/02-cost-control/: pattern.py
patterns/03-prompt-versioning/: pattern.py
patterns/04-eval-in-ci/: pattern.py
patterns/05-canary-rollout/: pattern.py
patterns/06-multi-provider-fallback/: pattern.py
patterns/07-prompt-caching/: pattern.py
patterns/08-observability/: pattern.py
patterns/09-error-classification/: pattern.py
patterns/10-compliance/: pattern.py
tests/: test_patterns_compile.py
