[project]
name = "claude-production-patterns"
version = "0.1.0"
description = "Production patterns for operating Claude at scale"
authors = [{name = "Doeon Kim"}]
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.5",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8", "ruff>=0.5", "black>=24.3"]
openai = ["openai>=1.12"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
